--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Find best product with cheapest prices"
+      content="Find best Quality product with statisfation"
     />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>BigBazar</title>
   </head>
   <body>
-    <script src="./src/index.js"></script>
+    <script src="./src/index.js" type="text/jsx"></script>
     <div id="root"></div>
    
   </body>
